<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.home.HomeFragment">
    <!--    button view menu  home page -->

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="649dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:gravity="fill"
                android:maxLines="1"
                android:text="@string/profile_name"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="de"
                android:src="@drawable/baseline_menu_24" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="369dp"
        android:layout_height="79dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_menu_hp_bg"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">


        <ImageButton
            android:id="@+id/button_calender"
            android:layout_width="53dp"
            android:layout_height="64dp"
            android:layout_marginStart="45dp"
            android:contentDescription="@string/content_desc_calender"
            android:src="@drawable/button_calender" />

        <ImageButton
            android:id="@+id/button_pet"
            android:layout_width="54dp"
            android:layout_height="66dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/content_desc_pets"
            android:src="@drawable/button_pet" />

        <ImageButton
            android:id="@+id/button_doctor"
            android:layout_width="54dp"
            android:layout_height="66dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/content_desc_dokter"
            android:src="@drawable/button_doctor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="355dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/appointmet_bg_hp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
            android:drawablePadding="8dp"
            android:text="@string/hompage_menu_appointment_header_text"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/baseline_calendar_today_24"
            android:drawablePadding="8dp"
            android:text="@string/date_appointment"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/baseline_access_time_24"
            android:drawablePadding="8dp"
            android:text="@string/times_appointment"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/doctor_name"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/recomended_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/doctor_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>